# worlds

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  ROADMAP.md  TODO.md
client/: Cargo.toml  Trunk.toml  index.html  manifest.json  service-worker.js  three_bridge.js  worker.js
client/i18n/: de.json  en.json  es.json  fr.json  ja.json
client/server/assets/: index.html  three_bridge.js  worlds-app-7532b33cd4a9e68b.js  worlds-app-b907f5e1c1fe984a_bg.wasm  worlds-app-f872acb0c69aa3f3.js
client/src/: app.rs  i18n.rs  lib.rs  style.rs
client/src/engine/: achievements.rs  audio.rs  bridge.rs  camera.rs  chunk.rs  codex.rs  controls.rs  creatures.rs  db.rs  erosion.rs  foam.rs  gamepad.rs  inventory.rs  joystick.rs  minerals.rs  minimap.rs  mod.rs  particles.rs  portals.rs  structures.rs  terrain.rs  tour.rs  vegetation.rs  waterfall.rs
client/src/engine/modding/: biome.rs  blueprint.rs  formula.rs  mod.rs
client/src/math/: builtins.rs
client/src/state/: mod.rs
scripts/: deploy.sh
server/: Cargo.toml
server/assets/: index.html
server/src/: main.rs
server/src/ws/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
