[package]
name = "worlds-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
console_error_panic_hook = "0.1"

worlds-shared = { path = "../shared" }

web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement", "console",
] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1