[package]
name = "worlds-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
rayon = "1.11"
wasm-bindgen-rayon = { version = "1.2", optional = true }
worlds-shared = { path = "../shared" }
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d",
    "HtmlElement", "Element", "MouseEvent", "KeyboardEvent",
    "KeyboardEventInit", "Navigator", "Performance",
    "TouchEvent", "TouchList", "Touch", "PointerEvent",
    "console", "DomRect", "HtmlDivElement", "HtmlInputElement",
    "Event", "Storage",
    "Gamepad", "GamepadButton",
        "AudioContext", "OscillatorNode", "GainNode", "AudioNode", "AudioDestinationNode", "AudioParam", "OscillatorType",
        "IdbDatabase", "IdbFactory", "IdbOpenDbRequest", "IdbRequest",
        "IdbTransaction", "IdbTransactionMode", "IdbVersionChangeEvent",
        "IdbObjectStore", "IdbIndex", "IdbCursorWithValue",
        "Location", "ServiceWorkerContainer", "ServiceWorkerRegistration", "Clipboard",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["parallel"]
parallel = ["wasm-bindgen-rayon"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
