[package]
name = "worlds-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worlds-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "compression-gzip", "limit", "fs"] }
tower = { version = "0.5.3", features = ["limit"] }
flume = "0.11"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
worlds-shared = { path = "../shared" }
uuid = { version = "1.0", features = ["v4"] }
stop-token = "0.7"
